RESOLVED FIXED226886
[iOS] VinylWall app crashes when tapping on 'format' dropdown menu in 'Add Record' menu
https://bugs.webkit.org/show_bug.cgi?id=226886
Summary [iOS] VinylWall app crashes when tapping on 'format' dropdown menu in 'Add Re...
Aditya Keerthi
Reported 2021-06-10 11:17:24 PDT
...
Attachments
Patch (6.11 KB, patch)
2021-06-10 11:22 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-06-10 11:17:34 PDT
Aditya Keerthi
Comment 2 2021-06-10 11:22:12 PDT
EWS
Comment 3 2021-06-10 14:03:08 PDT
Committed r278731 (238694@main): <https://commits.webkit.org/238694@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431095 [details].
Note You need to log in before you can comment on or make changes to this bug.